--- a/templates/dashboards/admin/modals/suspend-user.html
+++ b/templates/dashboards/admin/modals/suspend-user.html
@@ -143,10 +143,22 @@
             </div>
             
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" onclick="confirmSuspension()" id="suspendBtn" disabled>
-                    <i class="fas fa-ban me-1"></i>Suspend User
-                </button>
+                <form method="post" action="{% url 'platform_admin:reseller-suspend' reseller.id %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="reason" id="suspendReasonHidden" />
+                    <input type="hidden" name="description" id="suspendDescriptionHidden" />
+                    <input type="hidden" name="durationType" id="suspendDurationTypeHidden" />
+                    <input type="hidden" name="suspensionDuration" id="suspendDurationHidden" />
+                    <input type="hidden" name="endDate" id="suspendEndDateHidden" />
+                    <input type="hidden" name="blockLogin" id="suspendBlockLoginHidden" />
+                    <input type="hidden" name="freezeCommissions" id="suspendFreezeCommissionsHidden" />
+                    <input type="hidden" name="blockPayouts" id="suspendBlockPayoutsHidden" />
+                    <input type="hidden" name="notifyUser" id="suspendNotifyUserHidden" />
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-danger" onclick="prepareSuspendSubmit()" id="suspendBtn" disabled>
+                        <i class="fas fa-ban me-1"></i>Suspend User
+                    </button>
+                </form>
             </div>
         </div>
     </div>
@@ -253,7 +265,7 @@ function validateSuspensionForm() {
     suspendBtn.disabled = !isValid;
 }
 
-function confirmSuspension() {
+function prepareSuspendSubmit() {
     const reason = document.getElementById('suspensionReason').value;
     const customReason = document.getElementById('customReason').value;
     const description = document.getElementById('suspensionDescription').value;
@@ -303,25 +315,16 @@ function confirmSuspension() {
         return;
     }
     
-    // Simulate suspension process
-    const suspendBtn = document.getElementById('suspendBtn');
-    const originalText = suspendBtn.innerHTML;
-    suspendBtn.innerHTML = '<i class="fas fa-spinner fa-spin me-1"></i>Suspending...';
-    suspendBtn.disabled = true;
-    
-    setTimeout(() => {
-        alert('User suspended successfully!');
-        
-        suspendBtn.innerHTML = originalText;
-        suspendBtn.disabled = false;
-        
-        bootstrap.Modal.getInstance(document.getElementById('suspendUserModal')).hide();
-        
-        // Trigger refresh of user list
-        if (typeof refreshUserList === 'function') {
-            refreshUserList();
-        }
-    }, 2000);
+    // Populate hidden inputs then allow form to submit
+    document.getElementById('suspendReasonHidden').value = finalReason;
+    document.getElementById('suspendDescriptionHidden').value = description;
+    document.getElementById('suspendDurationTypeHidden').value = durationType;
+    document.getElementById('suspendDurationHidden').value = document.getElementById('suspensionDuration').value;
+    document.getElementById('suspendEndDateHidden').value = endDate || '';
+    document.getElementById('suspendBlockLoginHidden').value = document.getElementById('blockLogin').checked ? 'on' : '';
+    document.getElementById('suspendFreezeCommissionsHidden').value = document.getElementById('freezeCommissions').checked ? 'on' : '';
+    document.getElementById('suspendBlockPayoutsHidden').value = document.getElementById('blockPayouts').checked ? 'on' : '';
+    document.getElementById('suspendNotifyUserHidden').value = document.getElementById('notifyUser').checked ? 'on' : '';
 }
 
 // Event listeners
