--- a/templates/dashboards/reseller/pages/dashboard.html
+++ b/templates/dashboards/reseller/pages/dashboard.html
@@ -18,16 +18,16 @@
     <!-- Key Metrics Row -->
     <div class="row g-3 mb-4">
         <div class="col-12 col-sm-6 col-lg-3">
-            {% include 'dashboards/reseller/components/commission-card.html' with title="This Month" amount=monthly_commission trend="+12%" %}
+            {% include 'dashboards/reseller/components/commission-card.html' with title="This Month" amount=monthly_commission %}
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
-            {% include 'dashboards/reseller/components/commission-card.html' with title="Active Referrals" amount=active_referrals_count trend="+5" %}
+            {% include 'dashboards/reseller/components/commission-card.html' with title="Active Referrals" amount=active_referrals_count %}
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
-            {% include 'dashboards/reseller/components/commission-card.html' with title="Conversion Rate" amount=conversion_rate trend="+2.3%" %}
+            {% include 'dashboards/reseller/components/commission-card.html' with title="Conversion Rate" amount=conversion_rate %}
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
-            {% include 'dashboards/reseller/components/commission-card.html' with title="Tier Status" amount=tier_status trend="Silver" %}
+            {% include 'dashboards/reseller/components/commission-card.html' with title="Tier Status" amount=tier_status %}
         </div>
     </div>
 
