--- a/templates/dashboards/reseller/reseller-dashboard.html
+++ b/templates/dashboards/reseller/reseller-dashboard.html
@@ -16,21 +16,21 @@
                     <i class="fas fa-layer-group widget-icon"></i>
                     <div>
                         <h3>Current Tier</h3>
-                        <p>{{ current_tier|default:"Silver Partner" }}</p>
+                        <p>{{ current_tier|default:"" }}</p>
                     </div>
                 </div>
                 <div class="card widget">
                     <i class="fas fa-dollar-sign widget-icon"></i>
                     <div>
                         <h3>Commission Payouts</h3>
-                        <p>KES {{ total_commission|default:"15,000" }}</p>
+                        <p>KES {{ total_commission|default:"0" }}</p>
                     </div>
                 </div>
                 <div class="card widget">
                     <i class="fas fa-tags widget-icon"></i>
                     <div>
                         <h3>Subscription Level</h3>
-                        <p>{{ subscription_level|default:"Pro Tier" }}</p>
+                        <p>{{ subscription_level|default:"" }}</p>
                     </div>
                 </div>
             </section>
@@ -39,11 +39,11 @@
             <section class="sub-info">
                 <div class="card">
                     <h4>Start Date</h4>
-                    <p>{{ start_date|date:"d M Y"|default:"01 Jan 2025" }}</p>
+                    <p>{{ start_date|date:"d M Y"|default:"" }}</p>
                 </div>
                 <div class="card">
                     <h4>End Date</h4>
-                    <p>{{ end_date|date:"d M Y"|default:"01 Jan 2026" }}</p>
+                    <p>{{ end_date|date:"d M Y"|default:"" }}</p>
                 </div>
                 <div class="card">
                     <h4>Referring Reseller</h4>
